--- a/Portfolio1.html
+++ b/Portfolio1.html
@@ -323,7 +323,15 @@
       <h2>Connect</h2>
       <p><b>Email:</b> pradhanppp64@gmail.com</p><br>
       <p><b>Phone:</b> +91 6366322677</p><br>
-      <p><b>LinkedIn:</b> Add Profile Link</p>
+     <p><b>LinkedIn:</b>
+  <a href="https://linkedin.com/in/pradhan-p-033948294" target="_blank" style="color:#2563eb;">
+    linkedin.com/in/pradhan-p
+  </a>
+</p>
+<a href="https://github.com/pradhanppp64-oss" target="_blank">
+  GitHub Profile
+</a>
+
     </div>
 
     <!-- RESUME -->
@@ -358,3 +366,4 @@
 
 </body>
 </html>
+
