--- a/Portfolio1.html
+++ b/Portfolio1.html
@@ -337,7 +337,7 @@
     <!-- RESUME -->
     <div class="card" id="resume">
       <h2>Resume</h2>
-      <p>Download my resume: <a href="#" style="color:#2563eb;">Click here</a></p>
+      <p>Download my resume: <a href="file:///C:/Users/manoj/OneDrive/Documents/_Pradhan_Resume13.pdf" style="color:#2563eb;">Click here</a></p>
     </div>
 
     <footer>
@@ -366,4 +366,5 @@
 
 </body>
 </html>
+
 
